header spacing & svg fixes

--- a/components/CampNavbarLogoMiddle.module.scss
+++ b/components/CampNavbarLogoMiddle.module.scss
@@ -1,5 +1,6 @@
 .navbar {
-    height: 90px;
+    height: 200px;
+    background: var(--color-blueblack);
   }
   
   .header {
